# ahahooh

./: .gitignore  MVP设计.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: resume.md  save-conversation.md  save-plan.md
src/ahahooh/: __init__.py  cli.py  config.py  hook_handler.py  index.py  models.py  plan_sync.py  server.py  session_sync.py  storage.py
templates/: claude_md_fragment.md
templates/commands/: aharesume.md  resume.md  search-memory.md
